<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nreg"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/txtReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_weight="2">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Til"
            android:longClickable="false"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/txtTil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Sub"
            android:id="@+id/textView3"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtSub"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnInsertar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ins"
            android:layout_weight="1"
            android:textSize="8dp" />

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/act"
            android:layout_weight="1"
            android:textSize="8dp" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/elim"
            android:layout_weight="1"
            android:textSize="8dp" />

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cons"
            android:layout_weight="1"
            android:textSize="8dp" />

    </LinearLayout>

</LinearLayout>